--- a/db/package.json
+++ b/db/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/pg": "^8.11.6",
     "pg": "^8.12.0",
-    "redis": "^4.6.14"
+    "redis": "^4.6.14",
+    "typescript": "^5.6.2"
   }
 }
