--- a/mm/package.json
+++ b/mm/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "typescript": "^5.6.2"
   }
 }
